<resources>
    <string name="app_name">MovieCatalogAppV2</string>
    <string name="hint_search_for_movie">search by movie name</string>
    <string name="search">Search</string>
    <!--<string name="movie_release_date_long">Wednesday, Apr 27, 2016</string>
    <string name="movie_release_date_short">27 April 2016</string>
    <string name="movie_vote_value">8.2</string>
    <string name="movie_title">Captain America: Civil War</string>
    <string name="movie_overview_content">Following the events of Age of Ultron, the collective governments</string>-->
    <string name="refresh_data">Refresh Movie List</string>

    <string name="label_txt_release_date">Release Date</string>
    <string name="label_txt_vote">Vote Average:</string>
    <string name="label_txt_genres">Movie Genres</string>
    <string name="label_txt_overview">Overview</string>
    <string name="label_txt_belongs">Belongs To Collection</string>
    <string name="label_txt_budget">Budget</string>
    <string name="label_txt_revenue">Revenue</string>
    <string name="label_txt_companies">Companies</string>
    <string name="label_txt_countries">Countries</string>
    <string name="label_txt_production_details">Production Details</string>
</resources>
