<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/margin_clear_space">

    <com.example.user.moviecatalogappv2.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_spacing"
        android:text="@string/label_txt_production_details"
        android:textSize="@dimen/txt_large"
        app:fontName="alanya.regular.ttf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_poster_belongs"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sampleholder"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_clear_space">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_txt_belongs"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_title_belongs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="@dimen/txt_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_clear_space"
                android:text="@string/label_txt_budget"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_heading"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_clear_space"
                android:text="@string/label_txt_revenue"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_heading"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_clear_space"
                android:text="@string/label_txt_companies"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_companies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/txt_heading"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_clear_space"
                android:text="@string/label_txt_countries"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_countries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/margin_clear_space"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>