<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/margin_clear_space">

    <com.example.user.moviecatalogappv2.utils.CustomTextView
        android:id="@+id/txtView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_clear_space"
        android:textSize="@dimen/txt_large"
        app:fontName="alanya.regular.ttf"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="150dp"
            android:layout_height="225dp"
            android:scaleType="centerCrop"
            android:src="@drawable/newsampleholder"
            android:transitionName="asPoster"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_clear_space">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_txt_release_date"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_clear_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_txt_vote"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/txtView_vote_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_spacing"
                    android:textStyle="bold"/>

            </LinearLayout>

            <include layout="@layout/detail_rating"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_clear_space"
                android:text="@string/label_txt_genres"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtView_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_clear_space"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>